--- a/404.md
+++ b/404.md
@@ -4,10 +4,7 @@ excerpt: "Page Not Found"
 permalink: 404.html
 indexing: false
 sitemap: false
+aside: true
 ---
 
 Sorry, but the page could not be found.
-
-Are you looking for:
-
-{% include nav-default.html %}
